Fix row and column gaps for lenster in decoder and preview

--- a/decoder/src/styles/components.css
+++ b/decoder/src/styles/components.css
@@ -98,7 +98,7 @@
 }
 
 .lenster-div {
-  column-gap: 1.5rem !important;
+  /* column-gap: 1.5rem !important; */
   columns: 3;
   overflow: hidden !important;
 }
